--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -20,24 +22,27 @@
   </properties>
 
   <dependencies>
-    <!-- Yamcs core framework -->
+    <!-- Yamcs Core Framework -->
     <dependency>
       <groupId>org.yamcs</groupId>
       <artifactId>yamcs-core</artifactId>
       <version>${yamcsVersion}</version>
     </dependency>
-    <!-- Add this dependency to enable the web ui. -->
+
+    <!-- Yamcs Web UI -->
     <dependency>
       <groupId>org.yamcs</groupId>
       <artifactId>yamcs-web</artifactId>
       <version>${yamcsVersion}</version>
     </dependency>
+
     <!-- HMAC Generation Utils    -->
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
-      <version>1.15</version>
+      <version>1.17.1</version>
     </dependency>
+
   </dependencies>
 
   <build>
@@ -47,7 +52,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-            <release>17</release>
+          <release>17</release>
           <source>17</source>
           <target>17</target>
         </configuration>
